k8s/kustomize/infra/envs/dev/patches/frotend-httproute-patch.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-httproute
spec:
  parentRefs:
    - name: streamforge-gateway
      namespace: streamforge-dev
      sectionName: https-listener
  hostnames:
    - "sudheer.fun"
    - "*.sudheer.fun"
